# osm_ros_nav

./: README.md  main.cpp
install/: local_setup.sh  setup.sh
install/osm_nav/lib/osm_nav/: osm_navigation
install/osm_nav/share/ament_index/resource_index/package_run_dependencies/: osm_nav
install/osm_nav/share/osm_nav/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/osm_nav/share/osm_nav/cmake/: osm_navConfig.cmake
install/osm_nav_interface/include/osm_nav_interface/osm_nav_interface/msg/: rosidl_typesupport_introspection_c__visibility_control.h
install/osm_nav_interface/include/osm_nav_interface/osm_nav_interface/srv/detail/: planner__functions.c  planner__rosidl_typesupport_introspection_cpp.hpp  planner__struct.h  planner__struct.hpp  planner__type_support.c  planner__type_support.h
install/osm_nav_interface/local/lib/python3.10/dist-packages/osm_nav_interface/: _osm_nav_interface_s.ep.rosidl_typesupport_c.c
install/osm_nav_interface/local/lib/python3.10/dist-packages/osm_nav_interface-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/osm_nav_interface/local/lib/python3.10/dist-packages/osm_nav_interface/srv/: _planner_s.c
install/osm_nav_interface/share/ament_index/resource_index/package_run_dependencies/: osm_nav_interface
install/osm_nav_interface/share/osm_nav_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/osm_nav_interface/share/osm_nav_interface/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_osm_nav_interface__rosidl_generator_cExport-noconfig.cmake  export_osm_nav_interface__rosidl_generator_cExport.cmake  export_osm_nav_interface__rosidl_generator_pyExport.cmake  export_osm_nav_interface__rosidl_typesupport_fastrtps_cExport.cmake  export_osm_nav_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  osm_nav_interface__rosidl_typesupport_cppExport-noconfig.cmake  osm_nav_interface__rosidl_typesupport_cppExport.cmake  osm_nav_interface__rosidl_typesupport_introspection_cExport.cmake  osm_nav_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/osm_nav_interface/share/osm_nav_interface/srv/: Planner.srv
log/: latest_build
src/osm_nav_interface/: CMakeLists.txt  package.xml
src/osm_navigation/: CMakeLists.txt
src/osm_navigation/app/: osm_node.cpp
src/osm_navigation/cmake/: FindLZ4.cmake  FindOsmium.cmake  FindProtozero.cmake
src/osm_navigation/config/: osm_parser.yaml
src/osm_navigation/include/osm/: global_planner.hpp  osm_parser.hpp
src/osm_navigation/launch/: osm_parser.launch.py
src/osm_navigation/osm/: osm_parser.cpp
src/osm_navigation/osm_file/: 1.osm  1_1.osm  2.osm  2_2.osm  3.osm  3_3.osm  map.osm
